# pixracer_bsp

./: Cargo.toml  README.md  build.rs  openocd.cfg  openocd.gdb  segger.gdb  start_gdb_server_jlink.sh  stm32f427_memory.x
.cargo/: config
examples/: play.rs
src/: board.rs  lib.rs  peripherals.rs  peripherals_pixracer.rs
