[package]
name = "pixracer_bsp"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "A board support package for the Pixracer flight controller hardware"

[dependencies]
cortex-m = "0.6.2"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
panic-rtt-core = {version="0.1.0", optional=true}

stm32f4 = {version = "0.10.0", features = ["stm32f427"]  }
#stm32f4xx-hal = { version =" 0.6.0", features = ["stm32f427", "rt"] }
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", features = ["stm32f427", "rt"] }


[features]
default = []
rttdebug = ["panic-rtt-core"]

