[package]
name = "pixracer_bsp"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "A board support package for the Pixracer flight controller hardware"

[dependencies]
cortex-m = "0.6.2"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
panic-rtt-core = {version="0.1.0", optional=true}

stm32f4 = {version = "0.10.0", features = ["stm32f427"]  }
#stm32f4xx-hal = { version =" 0.6.0", features = ["stm32f427", "rt"] }
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", features = ["stm32f427", "rt"] }

# for ms5611 barometer
ms5611-spi = { git= "https://github.com/tstellanova/ms5611-ehal" }
# for HMC5883 mag
ist8310 = {git = "https://github.com/tstellanova/ist8310" }
# for Invensense  ICM-20608 6DOF accel/gyro
icm20689 = {git = "https://github.com/tstellanova/icm20689"}
# MPU9250 IMU
#mpu9250 = "0.20.0"
#mpu9250 =  {path="../mpu9250-rs"}
mpu9250 = {git="https://github.com/tstellanova/mpu9250"}


[dev-dependencies]
cortex-m-rt = "0.6.12"
panic-rtt-core = "0.1.0"
shared-bus = {version="0.1.4", features=["cortexm"] }


[features]
default = []
rttdebug = ["panic-rtt-core"]

