[package]
name = "pixracer_bsp"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "A board support package for the Pixracer flight controller hardware"

[dependencies]
cortex-m = "0.6.2"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
#panic-rtt-core = {version="0.1.0", optional=true}
panic-rtt-core = { path="../panic-rtt-core", optional=true }

stm32f4 = {version = "0.11", features = ["stm32f427"]  }
#stm32f4xx-hal = { version ="0.8.0", features = ["stm32f427", "rt"] }
stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", features = ["stm32f427", "rt"] }

# for ms5611 barometer
ms5611-spi = { git= "https://github.com/tstellanova/ms5611-ehal" }

# for HMC5893 mag
#hmc5983 = {path="../hmc5983", features=["rttdebug"]}
#hmc5983 = {git = "https://github.com/tstellanova/hmc5983"}
hmc5983 = "0.1.3"

# Invensense/TDK ICM-20608 6DOF accel/gyro
#icm20689 = {path = "../icm20689", features=["rttdebug"]}
#icm20689 = {git = "https://github.com/tstellanova/icm20689"}
icm20689 = "0.1.1"

# MPU9250 IMU
#mpu9250 =  {path="../mpu9250-rs"}
#mpu9250 = {git="https://github.com/tstellanova/mpu9250"}
mpu9250 = "0.20.0"

# FRAM
#spi-memory = { git = "https://github.com/tstellanova/spi-memory" }
spi-memory  =  {path= "../spi-memory" }

[dev-dependencies]
cortex-m-rt = "0.6.12"
#panic-rtt-core = {version="0.1.0"}
shared-bus = {version="0.1.4", features=["cortexm"] }
rand_core = "0.5.1"

[features]
default = []
rttdebug = ["panic-rtt-core"]

